<resources>
    <string name="app_name">TercerExamen</string>
    <string name="title_book">Titulo:</string>
    <string name="pages_book">Paginas:</string>
    <string name="description_book">Descripcion:</string>
    <string name="date_book">Fecha:</string>
    <string name="author_book">Autor:</string>
    <string name="url_book">Url:</string>
    <string name="isbn">Isbn:</string>
    <string name="add_book">Agregar Libro</string>
    <string name="title_activity_add_book">AddBookActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_edit_book">EditBookActivity</string>
</resources>